--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": { 
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "qudusayo",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
